tests/ui/typeck/function_calls/event_error_context.stderr
error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint x = MyEvent(1, "hi");
   ╰╴                 ━━━━━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.MyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         this.takeBytes(EmptyEvent());
   ╰╴                       ━━━━━━━━━━━━ expected `bytes memory`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint x = MyError(404, "not found");
   ╰╴                 ━━━━━━━━━━━━━━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.MyError`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         this.takeBytes(EmptyError());
   ╰╴                       ━━━━━━━━━━━━ expected `bytes memory`, found `EventErrorContext.EmptyError`

error: expression has to be an event invocation
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         emit Test();
   ╰╴             ━━━━

error: expression has to be an error
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         revert EmptyEvent();
   ╰╴               ━━━━━━━━━━

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         emit MyEvent(EmptyEvent(), "x");
   ╰╴                     ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         revert MyError(EmptyError(), "x");
   ╰╴                       ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyError`

error: cannot apply builtin operator `==` to `EventErrorContext.EmptyEvent` and `EventErrorContext.EmptyEvent`
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         bool b = EmptyEvent() == EmptyEvent();
   │                  ┬─────────── ━━ ──────────── EventErrorContext.EmptyEvent
   │                  │
   ╰╴                 EventErrorContext.EmptyEvent

error: cannot apply builtin operator `==` to `EventErrorContext.EmptyError` and `EventErrorContext.EmptyError`
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         bool b = EmptyError() == EmptyError();
   │                  ┬─────────── ━━ ──────────── EventErrorContext.EmptyError
   │                  │
   ╰╴                 EventErrorContext.EmptyError

error: cannot infer array element type
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint[2] memory arr = [EmptyEvent(), EmptyEvent()];
   ╰╴                             ━━━━━━━━━━━━━━━━━━━━━━━━━━━━

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint x = true ? EmptyEvent() : EmptyEvent();
   ╰╴                        ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint x = true ? EmptyEvent() : EmptyEvent();
   ╰╴                                       ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint x = true ? EmptyEvent() : EmptyEvent();
   ╰╴                 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         S memory s = S(EmptyEvent());
   ╰╴                       ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint v = m[EmptyEvent()];
   ╰╴                   ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint v = arr[EmptyEvent()];
   ╰╴                     ━━━━━━━━━━━━ expected `uint256`, found `EventErrorContext.EmptyEvent`

error: cannot apply builtin operator `+` to `EventErrorContext.EmptyEvent` and `EventErrorContext.EmptyEvent`
   ╭▸ ROOT/tests/ui/typeck/function_calls/event_error_context.sol:LL:CC
   │
LL │         uint x = EmptyEvent() + EmptyEvent();
   │                  ┬─────────── ━ ──────────── EventErrorContext.EmptyEvent
   │                  │
   ╰╴                 EventErrorContext.EmptyEvent

error: aborting due to 18 previous errors

